@@ -192,7 +192,10 @@ _make_command (mongoc_change_stream_t *stream, bson_t *command)
 
    /* Add batch size if needed */
    bson_append_document_begin (command, "cursor", 6, &cursor_doc);
-   if (stream->batch_size > 0) {
+   if (stream->batch_size >= 0) {
+      // `batchSize:0` is supported and applied to `aggregate`. `batchSize:0` requests an immediate cursor. This is
+      // useful to avoid a long-running server-side aggregate. Once created, `mongoc_change_stream_destroy` can use
+      // `killCursors` to kill the server-side cursor.
       bson_append_int32 (&cursor_doc, "batchSize", 9, stream->batch_size);
    }
    bson_append_document_end (command, &cursor_doc);
@@ -377,7 +380,7 @@ _change_stream_init (mongoc_change_stream_t *stream, const bson_t *pipeline, con
 
    _mongoc_timestamp_set (&stream->operation_time, &stream->opts.startAtOperationTime);
 
-   stream->batch_size = stream->opts.batchSize;
+   stream->batch_size = stream->opts.batchSize; // `stream->opts.batchSize` is -1 if not present in `opts`.
    stream->max_await_time_ms = stream->opts.maxAwaitTimeMS;
    stream->show_expanded_events = stream->opts.showExpandedEvents;
 
